# GNEkit

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
development/: ProblemA2dev.py  ProblemA3dev.py
development/overview/: index.html
development/standards/: index.html
dgbne_problems/: index.html
dgbne_theory/: index.html
docs/: dgbne_problems.md  dgbne_theory.md  examples.md  gne_problems.md  gne_theory.md  index.md  installation.md  user_guide.md
docs/examples/: index.md
docs/getting_started/: overview.md  quick_start.md
docs/guides/: core_concepts.md  creating_algorithm.md  dgbne_problems.md  gne_problems.md
docs/reference/: index.md
docs/stylesheets/: extra.css
examples/: index.html  main.py  testing.py
examples/bayesian/: index.html
examples/examples/: index.html
examples/standard/: index.html
getting_started/installation/: index.html
getting_started/overview/: index.html
gne_problems/: index.html
gne_solver/: GNEPlayer.py  GNEProblem.py  GNESolver.py  GNESolverAD.py  GNESolverBounded.py  GNESolverUnbounded.py  utils.py  validation.py
gne_theory/: index.html
gnep_solver/: BaseProblem.py  EnergyMethod.py  Game.py  GeneralizedGame.py  Player.py  __init__.py  schema.py  utils.py  validation.py
guides/choosing_algorithm/: index.html
installation/: index.html
problems/: __init__.py
reference/: index.html
search/: search_index.json
solvers/: CorePlayer.py  schema.py  utils.py  validation.py
tester_solver/: ManualBaseProblem.py  ManualGeneralizedGame.py
user_guide/: index.html
(+152 files in other folders)
